dibujando michimon en el canvas y responsive on

--- a/mishimon02/styles.css
+++ b/mishimon02/styles.css
@@ -1,5 +1,4 @@
-/* NOTA MENTAL: "mientras consolido la información mejor tenerlo a la mano por si lo necesito"
-Cuando quiero crear un vinculo entre el html y css utilizare selectores existen de tre tipos
+/* selectores 
 h =  de tipo que es la misma etiqueta del html
 .title = de clase y se utiliza con un punto
 #tittle= de id que se nombra con un # */
