--- a/mishimon03/styles.css
+++ b/mishimon03/styles.css
@@ -181,6 +181,41 @@ input:checked + label{
     border: 2px solid #67729D;
 }
 
+/* 🔥 Estilos responsivos para los botones */
+.control-direccional {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    margin-top: 20px;
+}
+
+.flecha {
+    width: 15vw;
+    height: 15vw;
+    max-width: 50px; 
+    max-height: 50px;
+    font-size: 1.5rem;
+    border: none;
+    background-color: #BB9CC0;
+    color: #67729D;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+
+.flecha:hover {
+    background-color: #67729D;
+    color:#FED9ED
+}
+
+.boton-central {
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 30%;
+
+
 /* 🔥 Estilos responsivos para que se apilen en pantallas pequeñas */
 @media (max-width: 480px) {
     .ataques {
@@ -203,4 +238,3 @@ input:checked + label{
         font-size: 15px;
     }
 }
-
