--- a/mishimon03/css/main.css
+++ b/mishimon03/css/main.css
@@ -9,6 +9,17 @@ body{
     font-family: 'Fira Sans Condensed', sans-serif;
     background-color: #FED9ED;
 }
+ul {
+    list-style: none; /* Quita los puntos de la lista */
+    padding: 0;
+}
+
+li {
+    display: block;
+    padding: 5px 10px;
+    margin: 5px;
+}
+
 
 section#sectionSeleccionarMascota{
     display: flex ; 
@@ -66,7 +77,7 @@ button#btnMascota:hover{
 
 .tajeta-de-mishimon:hover{
     color: #E7BCDE;
-    background-color: #BB9CC0;
+    background-color: #67729D;
 }
 
 button#btnMascota{
@@ -237,4 +248,31 @@ div#divAreaControlesDireccion {
     height: 50px;
     font-size: 20px;
     border-radius: 30%;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.close {
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
 }
